--- a/src/styles/screens.css
+++ b/src/styles/screens.css
@@ -1,5 +1,5 @@
 .start-screen {
-  min-height: calc(100vh - 2 * var(--shell-pad));
+  min-height: calc(100dvh - 2 * var(--shell-pad));
   display: grid;
   place-items: center;
   min-width: 0;
@@ -357,7 +357,7 @@
 }
 
 .gallery-screen {
-  min-height: calc(100vh - 2 * var(--shell-pad));
+  min-height: calc(100dvh - 2 * var(--shell-pad));
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -393,7 +393,7 @@
 }
 
 .collection-screen {
-  min-height: calc(100vh - 2 * var(--shell-pad));
+  min-height: calc(100dvh - 2 * var(--shell-pad));
   display: flex;
   flex-direction: column;
   align-items: center;
